Dockerfile and config.json updates:
- **Repository**: Base image switched to `ghcr.io/home-assistant/aarch64-base-debian:bullseye`.
- **Z-Way Installation**: Instead of using a repository for Z-Way installation, it's now directly installed via a `.deb` package. This allows for more flexibility in version management and installing necessary updates without repository dependency.
- **Ports**: Removed ports that were previously unused or didn't provide significant functionality for the addon.
- **Startup Script**: Transitioned from a standard startup script to using `services.d`, offering more flexibility in managing container processes.

- **init: false**: Added to disable Docker's built-in initialization. This prevents the addon from auto-initializing upon Home Assistant startup.
- **host_network: true**: Enables the addon to use the host's network. This is utilized to retrieve the controller's internal IP address, essential for ZBW_Connect functionality.
- **host_dbus: true**: Grants the addon access to the host's DBus. This is crucial for the HomeKit module, which interacts with other system components via DBus.
- **hassio_api: true**: Allows the addon to interact with the Home Assistant API, potentially useful for integrating addon features with the main system.
- **Logging Level**: Introduced a parameter allowing users to select the detail level of logs, useful for debugging or monitoring the addon's operation.

- **run.sh Decomposition**: The original `run.sh` script has been decomposed into multiple scripts to better manage the startup and initialization processes.
  - **services.d**: Contains the main scripts responsible for starting and stopping services. This structure allows for more granular control over each service's lifecycle.
    - **z-way-server**: Scripts within this directory manage the Z-Way server's startup and termination.
    - **zbw_connect**: Scripts here handle the startup and termination of the ZBW_Connect service.
  - **cont-init.d**: Conta

--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -2,7 +2,7 @@ name: Builder
 
 env:
   BUILD_ARGS: "--test"
-  MONITORED_FILES: "config.yaml Dockerfile Dockerfile.aarch64 Dockerfile.armhf run.sh"
+  MONITORED_FILES: "config.yaml Dockerfile Dockerfile.aarch64 Dockerfile.armhf rootfs/etc/services.d/z-way-server/run rootfs/etc/cont-init.d/z-way-server-init rootfs/etc/services.d/zbw_connect/run rootfs/etc/cont-init.d/zbw_connect-init"
 
 on:
   push:
