--- a/zwave_me_server/Dockerfile.armhf
+++ b/zwave_me_server/Dockerfile.armhf
@@ -1,63 +1,33 @@
-# Use the base image for the armhf architecture
-FROM ghcr.io/home-assistant/armv7-base-debian:bullseye
+FROM ghcr.io/home-assistant/armhf-base-debian:bullseye
 
-#ENV ZWAY_PACKAGE_URL=https://storage.z-wave.me/z-way-server/z-way-4.1.2-wb7-lws16_armhf.deb
-#ENV ZBW_PACKAGE_URL=https://storage.z-wave.me/z-way-server/zbw-2.6_all.deb
+WORKDIR /opt/z-way-server
 
 ENV DEBIAN_FRONTEND=noninteractive
-
-COPY rootfs/ /
 
 # Block zbw key request
 RUN mkdir -p /etc/zbw/flags && touch /etc/zbw/flags/no_connection
 
-# Install necessary libraries and their dependencies
-RUN apt-get update && apt-get install -y \
-#libarchive13 \
-#libxml2 \
-#libssl1.1 \
-#libz1 \
-#libcurl4 \
-wget \
-#sharutils \
-#gawk \
-#libc-ares2 \
-#libavahi-compat-libdnssd-dev \
-#libwebsockets16 \
-#libmosquitto1 \
-#libcurl3-gnutls \
-#libnss-mdns \
-#logrotate \
-#procps \
-#openssh-client \
-#net-tools \
-#iproute2 \
-#sudo \
-#jq \
-&& rm -rf /var/lib/apt/lists/*
+RUN apt-get update && \
+    apt-get install -qqy --no-install-recommends \
+    ca-certificates curl \
+    wget procps gpg iproute2 openssh-client openssh-server sudo logrotate jq
 
-RUN wget -q -O - https://storage.z-wave.me/Z-Way-Install |bash
+RUN sudo dpkg --add-architecture armhf
 
-RUN apt-get clean
-
-# Download and install the Z-Way deb package
-#RUN wget $ZWAY_PACKAGE_URL -O z-way.deb && dpkg -i z-way.deb && rm z-way.deb
-# Change config folders, this action is necessary for docker
+RUN wget -q -O - https://raw.githubusercontent.com/msazanov/Z-WayInstallScript/stock/Z-Way-Install |bash
+RUN rm -f /opt/z-way-server/automation/storage/*
 RUN sed -i 's|"config": "config"|"config": "configs/config"|g' /opt/z-way-server/automation/defaultConfigs/config.json
+
+RUN useradd -rm -d /home/support -s /bin/bash -g root -G sudo -u 1000 support
+RUN  echo 'support:razberry' | chpasswd
+
 RUN echo "ha" > /etc/z-way/box_type
 
-# Download and install the zbw deb package for remote access
-#RUN mkdir -p /etc/zbw/flags/
-#RUN wget $ZBW_PACKAGE_URL -O zbw.deb && dpkg -i zbw.deb && rm zbw.deb
-# Add 'support' user for remote tech support access
-RUN useradd -rm -d /home/support -s /bin/bash -g root -G sudo -u 1000 support
-RUN echo 'support:razberry' | chpasswd
 # Unblock zbw
 RUN rm /etc/zbw/flags/no_connection
 
-# Cleaning data after building image
-RUN rm -f /opt/z-way-server/automation/storage/*
+COPY rootfs/ /
 
-# Expose ports
 EXPOSE 8083
+
 ENTRYPOINT ["/init"]
