--- a/zwave_me_server/Dockerfile.aarch64
+++ b/zwave_me_server/Dockerfile.aarch64
@@ -12,6 +12,8 @@ RUN apt-get update && \
     ca-certificates curl \
     wget procps gpg iproute2 openssh-client openssh-server sudo logrotate jq
 
+RUN sudo dpkg --add-architecture armhf
+
 RUN wget -q -O - https://storage.z-wave.me/Z-Way-Install |bash
 RUN rm -f /opt/z-way-server/automation/storage/*
 RUN sed -i 's|"config": "config"|"config": "configs/config"|g' /opt/z-way-server/automation/defaultConfigs/config.json
