--- a/zwave_me_server/config.yaml
+++ b/zwave_me_server/config.yaml
@@ -1,5 +1,5 @@
 name: Z-Wave.Me Add-on
-version: 4.1.2b1
+version: v4.1.2-wb1
 slug: zwave_me_server
 description: 'Z-Wave.Me Z-Way add-on for Home Assistant'
 startup: services  # Determines when the add-on should start
