--- a/zwave_me_server/config.yaml
+++ b/zwave_me_server/config.yaml
@@ -7,7 +7,7 @@ arch:
   - amd64
   - aarch64
   - armhf
-url: https://github.com/z-wave-me/ha-z-wave-me-addon/
+url: https://github.com/msazanov/ha-z-wave-me-addon/
 ports:
   8083/tcp: 8083
   8084/tcp: 8084
@@ -31,4 +31,4 @@ ports_description:
   8083/tcp: Z-Way UI
   8084/tcp: Webif UI
   8883/tcp: MQTT server port (use port 8883 in the MQTT app)
-image: "ghcr.io/z-wave-me/{arch}-ha-z-wave-me-addon"
+image: "ghcr.io/mazanov/{arch}-ha-z-wave-me-addon"
