--- a/zwave_me_server/Dockerfile.aarch64
+++ b/zwave_me_server/Dockerfile.aarch64
@@ -1,30 +1,33 @@
-FROM balenalib/rpi-raspbian
+FROM ghcr.io/home-assistant/aarch64-base-debian:bullseye
 
 WORKDIR /opt/z-way-server
 
-ENV DEBIAN_FRONTEND=noninteractive 
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Block zbw key request
+RUN mkdir -p /etc/zbw/flags && touch /etc/zbw/flags/no_connection
 
 RUN apt-get update && \
     apt-get install -qqy --no-install-recommends \
     ca-certificates curl \
     wget procps gpg iproute2 openssh-client openssh-server sudo logrotate jq
 
-RUN wget -q -O - https://storage.z-wave.me/RaspbianInstall |bash
+RUN sudo dpkg --add-architecture armhf
+
+RUN wget -q -O - https://storage.z-wave.me/Z-Way-Install |bash
 RUN rm -f /opt/z-way-server/automation/storage/*
 RUN sed -i 's|"config": "config"|"config": "configs/config"|g' /opt/z-way-server/automation/defaultConfigs/config.json
 
-RUN useradd -rm -d /home/support -s /bin/bash -g root -G sudo -u 1000 support 
+RUN useradd -rm -d /home/support -s /bin/bash -g root -G sudo -u 1000 support
 RUN  echo 'support:razberry' | chpasswd
 
 RUN echo "ha" > /etc/z-way/box_type
 
-RUN wget -O /opt/z-way-server/automation/classes/AutomationController.js https://raw.githubusercontent.com/Z-Wave-Me/home-automation/1c5ad7bb95453b5bb7749ad2d1e5907d6949ccc3/classes/AutomationController.js
+# Unblock zbw
+RUN rm /etc/zbw/flags/no_connection
 
-COPY run.sh .
-RUN chmod a+x run.sh
+COPY rootfs/ /
 
 EXPOSE 8083
-EXPOSE 8084
-EXPOSE 8883
 
-CMD /opt/z-way-server/run.sh
+ENTRYPOINT ["/init"]
