change base image from buulseye to bookworm for Dockerfile.armhf

--- a/zwave_me_server/Dockerfile.armhf
+++ b/zwave_me_server/Dockerfile.armhf
@@ -1,4 +1,4 @@
-FROM ghcr.io/home-assistant/armhf-base-debian:bullseye
+FROM ghcr.io/home-assistant/armhf-base-debian:bookworm
 
 WORKDIR /opt/z-way-server
 
